--- a/README
+++ b/README
@@ -7,3 +7,5 @@ Algorithms to test my knowledge of Java concepts
 3.  Created a function that will print "fizz" if the number is divisible by 3, "buzz" if the number is divisible by 5, and "fizz buzz" if the number is divisible by both.  Used a for loop to iterate through a number sequence and while checking if those numbers were multiples of 3, 5, or 15.
 
 4.  Created a function to check if two strings are anagrams.  First part of function checks to see if the string lengths are equal and if not the function is false.  If the string lengths are equal then used for loop to compare the character of each string and check if they are the same.
+
+5.  Created a function that will print a multiplication table from 1 to 10 using multidimensional array. The numbers are printed as the function iterates over the nested for loops.
